# posture_optimization

./: README.md
CoMAN_2d_5R_float/: maximize_C5R_float_Fx.m  maximize_C5R_float_manip.m  minmax_C5R_float_tau_f.m
CoMAN_2d_5R_float/cpp/: CMakeLists.txt  CoMaN_2d_5R.cpp  CoMaN_2d_5R.h  nlopt_FC_5r.cpp  nlopt_FC_5r.h  nlopt_FLATFOOT_5r.cpp  nlopt_FLATFOOT_5r.h  nlopt_GEOM_5r.cpp  nlopt_GEOM_5r.h  nlopt_coman_5r_pushing.cpp  nlopt_maxFx_5r.cpp  nlopt_maxFx_5r.h
CoMAN_2d_5R_float/cpp/CoMan_LegsCad_23Dof_V4_FB/: UserModelStruct.c  UserModelStruct.h  userDef.h  user_sf_IO.c  user_sf_IO.h
CoMAN_2d_5R_float/cpp/CoMan_LegsCad_23Dof_V4_FB/animationR/: simdir.anim
CoMAN_2d_5R_float/cpp/CoMan_LegsCad_23Dof_V4_FB/animationR/vrml/: Readme first.txt  asm0001_vrml_01_prt.wrl  asm0001_vrml_02_prt.wrl  asm0001_vrml_03_prt.wrl  asm0001_vrml_04_prt.wrl  asm0001_vrml_05_prt.wrl  asm0001_vrml_06_prt.wrl  asm0001_vrml_07_prt.wrl  asm0001_vrml_08_prt.wrl  asm0001_vrml_09_prt.wrl  asm0001_vrml_10_prt.wrl  asm0001_vrml_11_prt.wrl  asm0001_vrml_12_prt.wrl  asm0001_vrml_13_prt.wrl  asm0001_vrml_14_prt.wrl  asm0001_vrml_15_prt.wrl  asm0001_vrml_16_prt.wrl  asm0001_vrml_17_prt.wrl  asm0001_vrml_18_prt.wrl  asm0001_vrml_19_prt.wrl  asm0001_vrml_20_prt.wrl  asm0001_vrml_21_prt.wrl  asm0001_vrml_22_prt.wrl  asm0001_vrml_23_prt.wrl  asm0001_vrml_24_prt.wrl  floor.wrl
CoMAN_2d_5R_float/cpp/CoMan_LegsCad_23Dof_V4_FB/dataR/: CoMan_LegsCad_23Dof_V4_FB.mbs  CoMan_LegsCad_23Dof_V4_FB.mbsdata
CoMAN_2d_5R_float/cpp/CoMan_LegsCad_23Dof_V4_FB/symbolicR/: mbs_dirdyna_CoMan_LegsCad_23Dof_V4_FB.c  mbs_dirdyna_CoMan_LegsCad_23Dof_V4_FB.h  mbs_sensor_CoMan_LegsCad_23Dof_V4_FB.c  mbs_sensor_CoMan_LegsCad_23Dof_V4_FB.h
CoMAN_2d_5R_float/cpp/robotran/: JNI_MBSysPad.cpp  JNI_MBSysPad.h  LocalDataStruct.h  MBSDataStruct_xml.c  MBSdataStruct.c  MBSdataStruct.h  MBSdataStructR7.h  MBSdef.h  MBSfun.h  MBSsensorStruct.c  MBSsensorStruct.h  lut.h  mbs_xml_def.h  mbs_xml_utilities.c  sfdef.h
CoMAN_2d_5R_float/nlopt/: nlopt_FC.m  nlopt_FLATFOOT.m  nlopt_GEOM.m  nlopt_maxFx.m  simdir.anim  supercoman.anim  supercoman.mat  supercomandeg.mat
CoMAN_2d_5R_float/robot/: genRobots.m
